--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	<script type="text/javascript">
 			$(document).ready(function() {
-				$('.screenshotThumbnail').fancybox();
+				$('.fancyScreenshot').fancybox();
 	        });
 	</script>
 	
@@ -76,14 +76,14 @@
 			<!-- SCREENSHOTS -->
 			<div style="margin-left: auto; margin-right: auto; margin-top: 80px; text-align: center">
 
-				<a class="screenshotThumbnail" href="img/img_web1.png" data-fancybox-group="gallery" ><img src="img/thumb1.png" alt="" /></a>
-				<a class="screenshotThumbnail" href="img/img_web2.png" data-fancybox-group="gallery" ><img src="img/thumb2.png" alt="" /></a>
+				<a class="fancyScreenshot" href="img/img_web1.png" data-fancybox-group="gallery" ><img class="screenshotThumbnail" src="img/thumb1.png" alt="" /></a>
+				<a class="fancyScreenshot" href="img/img_web2.png" data-fancybox-group="gallery" ><img class="screenshotThumbnail" src="img/thumb2.png" alt="" /></a>
 				
 			</div>
 
 			<div style="margin-left: auto; margin-right: auto; margin-bottom: 100px; text-align: center">
-				<a class="screenshotThumbnail" href="img/img_web3.png" data-fancybox-group="gallery" ><img src="img/thumb3.png" alt="" /></a>
-				<a class="screenshotThumbnail" href="img/img_web4.png" data-fancybox-group="gallery" ><img src="img/thumb4.png" alt="" /></a>
+				<a class="fancyScreenshot" href="img/img_web3.png" data-fancybox-group="gallery" ><img class="screenshotThumbnail" src="img/thumb3.png" alt="" /></a>
+				<a class="fancyScreenshot" href="img/img_web4.png" data-fancybox-group="gallery" ><img class="screenshotThumbnail" src="img/thumb4.png" alt="" /></a>
 				
 			</div>
 
