--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
 		    </div>
 
 			<!-- SCREENSHOTS -->
-			<div style="margin-left: auto; margin-right: auto; margin-top: 80px; text-align: center">
+			<div style="margin-left: auto; margin-right: auto; margin-top: 12%; text-align: center">
 
 				<a class="fancyScreenshot" href="img/img_web1.png" data-fancybox-group="gallery" ><img class="screenshotThumbnail" src="img/thumb1.png" alt="" /></a>
 				<a class="fancyScreenshot" href="img/img_web2.png" data-fancybox-group="gallery" ><img class="screenshotThumbnail" src="img/thumb2.png" alt="" /></a>
 				
 			</div>
 
-			<div style="margin-left: auto; margin-right: auto; margin-bottom: 100px; text-align: center">
+			<div style="margin-left: auto; margin-right: auto; margin-bottom: 15%; text-align: center">
 				<a class="fancyScreenshot" href="img/img_web3.png" data-fancybox-group="gallery" ><img class="screenshotThumbnail" src="img/thumb3.png" alt="" /></a>
 				<a class="fancyScreenshot" href="img/img_web4.png" data-fancybox-group="gallery" ><img class="screenshotThumbnail" src="img/thumb4.png" alt="" /></a>
 				
@@ -144,8 +144,8 @@
 			<DIV class="center" style="margin-bottom:120px;">
 
 					<div id="studios">
-						<A href="http://www.alikestudio.com"><IMG src="img/alikeLogo.png" width=98 height=157 style="margin-right:3vw;"></A>
-						<A href="http://pati.io" ><IMG  src="img/patiLogo.png" width=130 height=130 style="margin-left:3vw;" ></A>
+						<A href="http://www.alikestudio.com"><IMG src="img/alikeLogo.png" width=18%  style="margin-right:3vw;"></A>
+						<A href="http://pati.io" ><IMG  src="img/patiLogo.png" width=23% style="margin-left:3vw;" ></A>
 					</div>
 
 			</DIV>
