--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				</div>
 			</div>
 				
-			<div style="max-width: 800px; margin-left: auto; margin-right: auto; margin-top: 60px; margin-bottom: 60px">
+			<div style="max-width: 800px; margin-left: auto; margin-right: auto; margin-top: 13%; margin-bottom: 13%">
 				<P class="mainText" >
 			    LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe. You follow the crazy journey of a tiny human explorer whose robot girlfriend has been destroyed. Its pieces are scattered in dozens of planets full of fantastic aliens, space-time puzzles and hidden objects to collect.
 			    </P>
