--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 			<DIV class="center" style="margin-bottom:120px;">
 
 					<div id="studios">
-						<A href="http://www.alikestudio.com"><IMG src="img/alikeLogo.png" width=18%  style="margin-right:3vw;"></A>
-						<A href="http://pati.io" ><IMG  src="img/patiLogo.png" width=23% style="margin-left:3vw;" ></A>
+						<A href="http://www.alikestudio.com"><IMG src="img/alikeLogo.png" width=18%  style="margin-right:3vw; max-width=97px;"></A>
+						<A href="http://pati.io" ><IMG  src="img/patiLogo.png" width=23% style="margin-left:3vw; max-width=130px;" ></A>
 					</div>
 
 			</DIV>
