new twitter tags

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="product">
-	<meta name="twitter:site" content="http://loveyoutobitsgame.com">
+	<meta name="twitter:site" content="@LoveU2BitsGame">
 	<meta name="twitter:title" content="Love You To Bits">
 	<meta name="twitter:description" content="A game of love and pieces">
 	<meta name="twitter:creator" content="alike and enric jorda">
@@ -38,12 +38,13 @@
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Love You To Bits" />
 	<meta property="og:type" content="game" />
-	<meta property="og:url" content="hhttp://loveyoutobitsgame.com/" />
+	<meta property="og:domain" content="hhttp://loveyoutobitsgame.com/" />
 	<meta property="og:image" content="ttp://www.loveyoutobitsgame.com/img/thumb1.png" />
 	<meta property="og:description" content="A game of love and pieces" />
-	<meta property="og:site_name" content="Love you to bits" />
-	<!--<meta property="og:price:amount" content="15.00" />
-	<meta property="og:price:currency" content="USD" /> -->
+	<meta name="twitter:label1" content="Game genre">
+	<meta name="twitter:data1" content="Point-and-click adventure">
+	<meta name="twitter:label2" content="Platforms">
+	<meta name="twitter:data2" content="Ios, Android, PC and Mac">
 
 
 	<!-- Add jQuery library -->
