new twitter tags

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<meta name="twitter:label1" content="Game genre">
 	<meta name="twitter:data1" content="Point-and-click adventure">
 	<meta name="twitter:label2" content="Platforms">
-	<meta name="twitter:data2" content="Ios, Android, PC and Mac">
+	<meta name="twitter:data2" content="Soon to Ios, Android, PC and Mac">
 
 
 	<!-- Add jQuery library -->
