new twitter tags

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<meta property="og:title" content="Love You To Bits" />
 	<meta property="og:type" content="game" />
 	<meta property="og:domain" content="hhttp://loveyoutobitsgame.com/" />
-	<meta property="og:image" content="ttp://www.loveyoutobitsgame.com/img/thumb1.png" />
+	<meta property="og:image" content="http://www.loveyoutobitsgame.com/img/thumb1.png" />
 	<meta property="og:description" content="A game of love and pieces" />
 	<meta name="twitter:label1" content="Game genre">
 	<meta name="twitter:data1" content="Point-and-click adventure">
