--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 	<link href='http://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
 
-	<meta name="author" content="alikeAndEnricJorda">
-	<meta name="keywords" content="love, you, to, bits, loveyoutobits, indie, game, point, click, touch, screen, puzzle, level, single-player, comedy, cute, adventure, quest, space, cosmos, universe, planets, aliens, mobile, iOS, android, pc, mac. Love You To Bits, Love, You, To, Bits, iOS, Android, Puzzle, Game, AppStore, adventure">
+	<meta name="author" content="Alike And Enric Jorda">
+	<meta name="keywords" content="love, you, to, bits, loveyoutobits, loveu2tobits, indie, game, point, click, touch, screen, puzzle, level, single-player, comedy, cute, adventure, quest, space, cosmos, universe, planets, aliens, mobile, iOS, android, pc, mac, Love You To Bits, Bits, iOS, Android, Puzzle, Game, AppStore, adventure">
 	<!--<meta name="google-site-verification" content="" />-->
 	<meta name="description" content=" LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -141,8 +141,8 @@
 			 <!-- MORE LINKS -->
 			<DIV style="margin-left: auto; margin-right: auto; padding-top: 20px; padding-bottom: 50px;">
 
-				<P class="center"><A class="bigLink" href="./presskit.zip">Presskit</A></P>
-				<P class="center"><A class="bigLink" href="">Development Blog</A></P>
+				<!--<P class="center"><A class="bigLink" href="./presskit.zip">Presskit</A></P>-->
+				<P class="center"><A class="bigLink" href="http://forums.tigsource.com/index.php?topic=44806.0">Development Blog</A></P>
 			</DIV>
 
 			<div id="companies">
