facebook link correction

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			<!-- SOCIAL -->
 			<DIV class="center">
 
-					<A href="https://www.facebook.com/Love-You-To-Bits"><IMG src="img/fbLogo.png" width=50 height=50 ></A>
+					<A href="https://www.facebook.com/loveyoutobitsgame"><IMG src="img/fbLogo.png" width=50 height=50 ></A>
 					<A href="https://twitter.com/LoveU2BitsGame"><IMG src="img/twitterLogo.png" width=50 height=50 style ="margin-left:20px;"></A>
 
 			</DIV>
