facebook link correction

--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Love You to Bits: a point-and-click cosmic quest." />
-	<meta property="og:type" content="article" />
-	<meta property="og:url" content="http://loveyoutobitsgame.com/" />
-	<meta property="og:image" content="http://www.loveyoutobitsgame.com/img/thumb1.png" />
-	<meta property="og:description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe." />
+	<meta property="og:url" content="http://loveyoutobitsgame.com" />
+	<meta property="og:description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe.">
+	<meta property="og:image" content="http://www.loveyoutobitsgame.com/img/thumb3.png" />
 
 
 	<!-- Add jQuery library -->
