testing problems with open graph

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	<meta property="og:title" content="Love You to Bits: a point-and-click cosmic quest." />
 	<meta property="og:url" content="http://loveyoutobitsgame.com" />
 	<meta property="og:description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe.">
+	<meta property="og:title" content="Love You to Bits: a point-and-click cosmic quest." />
 	<meta property="og:image" content="http://www.loveyoutobitsgame.com/img/thumb3.png" />
 
 
