testing problems with open graph

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Love You to Bits: a point-and-click cosmic quest." />
+	<meta property="og:type" content="game" />
 	<meta property="og:url" content="http://loveyoutobitsgame.com" />
 	<meta property="og:description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe.">
 	<meta property="og:title" content="Love You to Bits: a point-and-click cosmic quest." />
