testing problems with open graph

--- a/index.html
+++ b/index.html
@@ -24,24 +24,23 @@
 	<meta itemprop="image" content="http://www.loveyoutobitsgame.com/img/thumb1.png">
 
 	<!-- Twitter Card data -->
-	<meta name="twitter:card" content="product">
-	<meta name="twitter:site" content="@LoveU2BitsGame">
-	<meta name="twitter:title" content="Love You to Bits: a point-and-click cosmic quest.">
-	<meta name="twitter:description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe.">
-	<meta name="twitter:creator" content="alike and enric jorda">
-	<meta name="twitter:image" content="http://www.loveyoutobitsgame.com/img/thumb4.png">
-	<meta name="twitter:domain" content="http://loveyoutobitsgame.com/">
-	<meta name="twitter:label1" content="Game genre">
-	<meta name="twitter:data1" content="Point-and-click cosmic quest">
-	<meta name="twitter:label2" content="Platforms">
-	<meta name="twitter:data2" content="Soon to Ios, Android, PC and Mac">
+	<meta name="twitter:card" content="product"/>
+	<meta name="twitter:site" content="@LoveU2BitsGame"/>
+	<meta name="twitter:title" content="Love You to Bits: a point-and-click cosmic quest."/>
+	<meta name="twitter:description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe."/>
+	<meta name="twitter:creator" content="alike and enric jorda"/>
+	<meta name="twitter:image" content="http://www.loveyoutobitsgame.com/img/thumb4.png"/>
+	<meta name="twitter:domain" content="http://loveyoutobitsgame.com/"/>
+	<meta name="twitter:label1" content="Game genre"/>
+	<meta name="twitter:data1" content="Point-and-click cosmic quest"/>
+	<meta name="twitter:label2" content="Platforms"/>
+	<meta name="twitter:data2" content="Soon to Ios, Android, PC and Mac"/>
 	<!--<meta name="twitter:data1" content="$3">
 	<meta name="twitter:label1" content="Price">
 	<meta name="twitter:data2" content="Black">
 	<meta name="twitter:label2" content="Color">-->
 
 	<!-- Open Graph data -->
-	<meta property="og:title" content="Love You to Bits: a point-and-click cosmic quest." />
 	<meta property="og:type" content="game" />
 	<meta property="og:url" content="http://loveyoutobitsgame.com" />
 	<meta property="og:description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe.">
