testing problems with open graph

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 	<meta name="twitter:label2" content="Color">-->
 
 	<!-- Open Graph data -->
-	<meta property="og:type" content="game" />
+	<meta property="og:site_name" content="Love You To Bits Game" />
+	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://loveyoutobitsgame.com" />
 	<meta property="og:description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe.">
 	<meta property="og:title" content="Love You to Bits: a point-and-click cosmic quest." />
