testing problems with open graph

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 	<meta name="description" content=" LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<!-- Open Graph data -->
+	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+  <meta property="og:type"   content="website" /> 
+  <meta property="og:url"    content="http://www.loveyoutobitsgame.com" /> 
+  <meta property="og:title"  content="Love You to Bits: a point-and-click cosmic quest." /> 
+  <meta property="og:image"  content="http://www.loveyoutobitsgame.com/img/thumb1.png" /> 
+
 	 <!-- Schema.org markup for Google+ -->
 	<meta itemprop="name" content="Love You to Bits: a point-and-click cosmic quest.">	
 	<meta itemprop="description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe.">
@@ -39,14 +46,6 @@
 	<meta name="twitter:label1" content="Price">
 	<meta name="twitter:data2" content="Black">
 	<meta name="twitter:label2" content="Color">-->
-
-	<!-- Open Graph data -->
-	<meta property="og:site_name" content="Love You To Bits Game" />
-	<meta property="og:type" content="website" />
-	<meta property="og:url" content="http://loveyoutobitsgame.com" />
-	<meta property="og:description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe.">
-	<meta property="og:title" content="Love You to Bits: a point-and-click cosmic quest." />
-	<meta property="og:image" content="http://www.loveyoutobitsgame.com/img/thumb3.png" />
 
 
 	<!-- Add jQuery library -->
