testing problems with open graph

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- Open Graph data -->
 	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
   <meta property="og:type"   content="website" /> 
-  <meta property="og:url"    content="http://www.loveyoutobitsgame.com" /> 
+  <meta property="og:url"    content="http://loveyoutobitsgame.com/" /> 
   <meta property="og:title"  content="Love You to Bits: a point-and-click cosmic quest." /> 
   <meta property="og:image"  content="http://www.loveyoutobitsgame.com/img/thumb1.png" /> 
 
