--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <meta property="og:type"   content="website" /> 
   <meta property="og:url"    content="http://loveyoutobitsgame.com/" /> 
   <meta property="og:title"  content="Love You to Bits: a point-and-click cosmic quest." /> 
+  <meta property="og:description"  content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe. You follow the crazy journey of a tiny human explorer whose robot girlfriend has been destroyed. Its pieces are scattered in dozens of planets full of fantastic aliens, space-time puzzles and hidden objects to collect." /> 
   <meta property="og:image"  content="http://www.loveyoutobitsgame.com/img/thumb1.png" /> 
 
 	 <!-- Schema.org markup for Google+ -->
