--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta property="og:url"    content="http://loveyoutobitsgame.com/" /> 
   <meta property="og:title"  content="Love You to Bits: a point-and-click cosmic quest." /> 
   <meta property="og:description"  content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe. You follow the crazy journey of a tiny human explorer whose robot girlfriend has been destroyed. Its pieces are scattered in dozens of planets full of fantastic aliens, space-time puzzles and hidden objects to collect." /> 
-  <meta property="og:image"  content="http://www.loveyoutobitsgame.com/img/thumb1.png" /> 
+  <meta property="og:image"  content="http://loveyoutobitsgame.com/img/thumb1.png" /> 
 
 	 <!-- Schema.org markup for Google+ -->
 	<meta itemprop="name" content="Love You to Bits: a point-and-click cosmic quest.">	
@@ -36,7 +36,7 @@
 	<meta name="twitter:title" content="Love You to Bits: a point-and-click cosmic quest."/>
 	<meta name="twitter:description" content="LOVE YOU TO BITS is a crazy point-and-click sci-fi adventure spanning all around the universe."/>
 	<meta name="twitter:creator" content="alike and enric jorda"/>
-	<meta name="twitter:image" content="http://www.loveyoutobitsgame.com/img/thumb4.png"/>
+	<meta name="twitter:image" content="http://loveyoutobitsgame.com/img/thumb4.png"/>
 	<meta name="twitter:domain" content="http://loveyoutobitsgame.com/"/>
 	<meta name="twitter:label1" content="Game genre"/>
 	<meta name="twitter:data1" content="Point-and-click cosmic quest"/>
