--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			 <!-- MORE LINKS -->
 			<DIV style="margin-left: auto; margin-right: auto; padding-top: 20px; padding-bottom: 50px;">
 
-				<!--<P class="center"><A class="bigLink" href="./presskit.zip">Presskit</A></P>-->
+				<P class="center"><A class="bigLink" href="./presskitLoveYouToBits.zip">Presskit</A></P>
 				<P class="center"><A class="bigLink" href="http://forums.tigsource.com/index.php?topic=44806.0">Development Blog</A></P>
 			</DIV>
 
