--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 			<!-- SOCIAL -->
 			<DIV class="center">
 
-					<A href="https://www.facebook.com/loveyoutobitsgame"><IMG src="img/fbLogo.png" width=50 height=50 ></A>
-					<A href="https://twitter.com/LoveU2BitsGame"><IMG src="img/twitterLogo.png" width=50 height=50 style ="margin-left:20px;"></A>
+					<A href="https://www.facebook.com/loveyoutobitsgame" target="_blank"><IMG src="img/fbLogo.png" width=50 height=50 ></A>
+					<A href="https://twitter.com/LoveU2BitsGame" target="_blank"><IMG src="img/twitterLogo.png" width=50 height=50 style ="margin-left:20px;"></A>
 
 			</DIV>
 			   
@@ -142,16 +142,16 @@
 			<DIV style="margin-left: auto; margin-right: auto; padding-top: 20px; padding-bottom: 50px;">
 
 				<P class="center"><A class="bigLink" href="./presskitLoveYouToBits.zip">Presskit</A></P>
-				<P class="center"><A class="bigLink" href="http://forums.tigsource.com/index.php?topic=44806.0">Development Blog</A></P>
+				<P class="center"><A class="bigLink" href="http://forums.tigsource.com/index.php?topic=44806.0" target="_blank">Development Blog</A></P>
 			</DIV>
 
 			<div id="companies">
 				<div id="studios">
 					<div style=" width: 36%;float:left; margin-left:8%; margin-right:3%;">
-						<A href="http://www.alikestudio.com"><IMG src="img/alikeLogo.png" width="100%"></A>
+						<A href="http://www.alikestudio.com" target="_blank"><IMG src="img/alikeLogo.png" width="100%"></A>
 					</div>
 					<div style=" width: 42%; float:right; margin-left:3%; margin-right:8%; margin-top:12%;">
-					<A href="http://pati.io" ><IMG  src="img/patiLogo.png" width="100%"></A>
+					<A href="http://pati.io" target="_blank"><IMG  src="img/patiLogo.png" width="100%"></A>
 					</div>
 				</div>
 			</div>
