--- a/trailer.html
+++ b/trailer.html
@@ -1,5 +1,5 @@
 <html>
 <head>
 <title> Trailer </title>
-<meta HTTP-EQUIV="REFRESH" content="0; url="https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be">
+<meta HTTP-EQUIV="REFRESH" content="0; url=https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be">
 </head>
