--- a/trailer.html
+++ b/trailer.html
@@ -1,6 +1,11 @@
 <html>
 <head>
-<title> Trailer </title>
-<meta HTTP-EQUIV="REFRESH" content="0; url=https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be">
-<body></body>
+<title> Trailer redirection</title>
+<meta HTTP-EQUIV="REFRESH" content="1; url=https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be">
+<script>
+  window.location.href = "https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be"
+</script>
+<body>
+  <a>If you are not redirected automatically, follow the <a href='https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be'>link to example</a>
+</body>
 </head>
