--- a/trailer.html
+++ b/trailer.html
@@ -6,6 +6,6 @@
   window.location.href = "https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be"
 </script>
 <body>
-  <a>If you are not redirected automatically, follow the <a href='https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be'>link to example</a>
+  <a>If you are not redirected automatically, follow the <a href='https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be'>link to the trailer</a>
 </body>
 </head>
