--- a/trailer.html
+++ b/trailer.html
@@ -3,9 +3,9 @@
 <title> Trailer redirection</title>
 <meta HTTP-EQUIV="REFRESH" content="1; url=https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be">
 <script>
-  window.location.href = "https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be"
+  window.location.href = "https://youtu.be/QPjuh86LH9c"
 </script>
 <body>
-  <a>If you are not redirected automatically, follow the <a href='https://www.youtube.com/watch?v=04TEc-7CVsI&feature=youtu.be'>link to the trailer</a>
+  <a>If you are not redirected automatically, follow the <a href='https://youtu.be/QPjuh86LH9c'>link to the trailer</a>
 </body>
 </head>
