--- a/indexl.html
+++ b/indexl.html
@@ -41,7 +41,7 @@
 	<meta name="twitter:label1" content="Game genre"/>
 	<meta name="twitter:data1" content="Point-and-click cosmic quest"/>
 	<meta name="twitter:label2" content="Platforms"/>
-	<meta name="twitter:data2" content="Soon to Ios, Android, PC and Mac"/>
+	<meta name="twitter:data2" content="Ios and soon to Android, PC and Mac"/>
 	<!--<meta name="twitter:data1" content="$3">
 	<meta name="twitter:label1" content="Price">
 	<meta name="twitter:data2" content="Black">
@@ -120,7 +120,7 @@
 
 			<div id="platformsAndComing" style="position: relative; margin-top: 10%">
 		    	<P id="coming" class="center">Coming 2016	</P>
-		    	<P class="center">iOS, Android, PC and Mac</P>
+		    	<P class="center">Android, PC and Mac</P>
 		    </div>
 
 			<!-- SCREENSHOTS -->
