--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<meta name="twitter:label1" content="Game genre"/>
 	<meta name="twitter:data1" content="Point-and-click cosmic quest"/>
 	<meta name="twitter:label2" content="Platforms"/>
-	<meta name="twitter:data2" content="Soon to Ios, Android, PC and Mac"/>
+	<meta name="twitter:data2" content="Ios and soon to Android, PC and Mac"/>
 	<!--<meta name="twitter:data1" content="$3">
 	<meta name="twitter:label1" content="Price">
 	<meta name="twitter:data2" content="Black">
@@ -91,11 +91,15 @@
 		</div>
 
 		<div id="content">
-		
+			
+			<div id="stores">
+						<A href="https://itunes.apple.com/app/id941057494" target="_blank"><IMG src="img/app_store_button.png" width="100%"></A>
+			</div>
+
 			<!-- TRAILER -->
 			<div id="wrapperIframe">
    				 <div class="h_iframe">
-					<iframe src="http://www.youtube.com/embed/04TEc-7CVsI?vq=hd720?rel=0&controls=1" frameborder="0" allowfullscreen ></iframe>
+					<iframe src="https://www.youtube.com/embed/QPjuh86LH9c?vq=hd720?rel=0&controls=1" frameborder="0" allowfullscreen ></iframe>
 				</div>
 			</div>
 				
@@ -105,9 +109,18 @@
 			    </P>
 			</div>
 
-			<div id="platformsAndComing">
+			<div id="prizes">
+				<div style=" width: 40%;float:left; margin-left:5%; margin-right:3%">
+					<IMG src="img/laurel_3dwire.png" width="100%">
+				</div>
+				<div style=" width: 40%; float:right; margin-left:3%; margin-right:5%">
+					<IMG  src="img/laurel_imga.png" width="100%">
+				</div>
+			</div>
+
+			<div id="platformsAndComing" style="position: relative; margin-top: 10%">
 		    	<P id="coming" class="center">Coming 2016	</P>
-		    	<P class="center">iOS, Android, PC and Mac</P>
+		    	<P class="center">Android, PC and Mac</P>
 		    </div>
 
 			<!-- SCREENSHOTS -->
@@ -142,7 +155,7 @@
 			<DIV style="margin-left: auto; margin-right: auto; padding-top: 20px; padding-bottom: 50px;">
 
 				<P class="center"><A class="bigLink" href="./presskitLoveYouToBits.zip">Presskit</A></P>
-				<P class="center"><A class="bigLink" href="http://forums.tigsource.com/index.php?topic=44806.0" target="_blank">Development Blog</A></P>
+				<!--<P class="center"><A class="bigLink" href="http://forums.tigsource.com/index.php?topic=44806.0" target="_blank">Development Blog</A></P>-->
 			</DIV>
 
 			<div id="companies">
