--- a/indexl.html
+++ b/indexl.html
@@ -110,35 +110,12 @@
 			</div>
 
 			<div id="prizes">
-				<div style=" width: 28%;float:left; margin-left:5%; margin-right:3%">
+				<div style=" width: 40%;float:left; margin-left:5%; margin-right:3%">
 					<IMG src="img/laurel_3dwire.png" width="100%">
 				</div>
-				<div style=" width: 28%; float:left; ">
+				<div style=" width: 40%; float:right; margin-left:3%; margin-right:5%">
 					<IMG  src="img/laurel_imga.png" width="100%">
 				</div>
-				<div style=" width: 28%; float:left; margin-left:3%; margin-right:5%">
-					<IMG  src="img/laurel_indieplus.png" width="100%">
-				</div>
-			</div>
-			<div id="prizes">
-				<div style=" width: 28%;float:left; margin-left:5%; margin-right:3%">
-					<IMG src="img/laurel_3hma.png" width="100%">
-				</div>
-				<div style=" width: 28%; float:left; ">
-					<IMG  src="img/laurel_reboot_develop1.png" width="100%">
-				</div>
-				<div style=" width: 28%; float:left; margin-left:3%; margin-right:5%">
-					<IMG  src="img/laurel_reboot_develop2.png" width="100%">
-				</div>
-			</div>
-			<div id="prizes">
-				<div style=" width: 28%;float:left; margin-left:5%; margin-right:3%">
-					<IMG src="img/laurel_devgamm.png" width="100%">
-				</div>
-				<div style=" width: 28%; float:left; ">
-					<IMG  src="img/laurel_pixel_heaven.png" width="100%">
-				</div>
-				
 			</div>
 
 			<div id="platformsAndComing" style="position: relative; margin-top: 10%">
