--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
 				<div style=" width: 28%; float:left; ">
 					<IMG  src="img/laurel_pixel_heaven.png" width="100%">
 				</div>
-				
+				<div style=" width: 28%; float:left; margin-left:3%; margin-right:5%">
+					<IMG  src="img/laurel_digital_dragons.png" width="100%">
+				</div>
 			</div>
 
 			<div id="platformsAndComing" style="position: relative; margin-top: 10%">
