update prizes and android launch

--- a/index.html
+++ b/index.html
@@ -109,42 +109,71 @@
 			    </P>
 			</div>
 
+
 			<div id="prizes">
-				<div style=" width: 28%;float:left; margin-left:5%; margin-right:3%">
-					<IMG src="img/laurel_3dwire.png" width="100%">
+				<div style=" width: 20%;float:left; margin-left:5%; margin-right:3%">
+					<IMG src="img/laurel/laurel_gamelab_art.png" width="100%">
 				</div>
-				<div style=" width: 28%; float:left; ">
-					<IMG  src="img/laurel_imga.png" width="100%">
+				<div style=" width: 20%; float:left; "">
+					<IMG  src="img/laurel/laurel_gamelab_mobile.png" width="100%">
 				</div>
-				<div style=" width: 28%; float:left; margin-left:3%; margin-right:5%">
-					<IMG  src="img/laurel_indieplus.png" width="100%">
+				<div style=" width: 20%; float:left; margin-left:3%">
+					<IMG  src="img/laurel/laurel_3hma.png" width="100%">
 				</div>
-			</div>
-			<div id="prizes">
-				<div style=" width: 28%;float:left; margin-left:5%; margin-right:3%">
-					<IMG src="img/laurel_3hma.png" width="100%">
-				</div>
-				<div style=" width: 28%; float:left; ">
-					<IMG  src="img/laurel_reboot_develop1.png" width="100%">
-				</div>
-				<div style=" width: 28%; float:left; margin-left:3%; margin-right:5%">
-					<IMG  src="img/laurel_reboot_develop2.png" width="100%">
-				</div>
-			</div>
-			<div id="prizes">
-				<div style=" width: 28%;float:left; margin-left:5%; margin-right:3%">
-					<IMG src="img/laurel_devgamm.png" width="100%">
-				</div>
-				<div style=" width: 28%; float:left; ">
-					<IMG  src="img/laurel_pixel_heaven.png" width="100%">
-				</div>
-				<div style=" width: 28%; float:left; margin-left:3%; margin-right:5%">
-					<IMG  src="img/laurel_digital_dragons.png" width="100%">
+				<div style=" width: 20%; float:left; margin-left:3%; margin-right:5%">
+					<IMG src="img/laurel/laurel_pixel_heaven.png" width="100%">
 				</div>
 			</div>
 
+			<div id="prizes">
+				<div style=" width: 20%;float:left; margin-left:5%; margin-right:3%">
+					<IMG src="img/laurel/laurel_indieplus.png" width="100%">
+				</div>
+				<div style=" width: 20%; float:left; "">
+					<IMG  src="img/laurel/laurel_imga.png" width="100%">
+				</div>
+				<div style=" width: 20%; float:left; margin-left:3%">
+					<IMG  src="img/laurel/laurel_catalan.png" width="100%">
+				</div>
+				<div style=" width: 20%; float:left; margin-left:3%; margin-right:5%">
+					<IMG src="img/laurel/laurel_3dwire	.png" width="100%">
+				</div>
+			</div>
+
+			<div id="prizes">
+				<div style=" width: 20%;float:left; margin-left:5%; margin-right:3%">
+					<IMG src="img/laurel/laurel_burguer.png" width="100%">
+				</div>
+				<div style=" width: 20%; float:left; "">
+					<IMG  src="img/laurel/laurel_burguer2.png" width="100%">
+				</div>
+				<div style=" width: 20%; float:left; margin-left:3%">
+					<IMG  src="img/laurel/laurel_gamelab_goty.png" width="100%">
+				</div>
+				<div style=" width: 20%; float:left; margin-left:3%; margin-right:5%">
+					<IMG src="img/laurel/laurel_gamelab_music.png" width="100%">
+				</div>
+			</div>
+
+			<div id="prizes">
+				<div style=" width: 20%;float:left; margin-left:5%; margin-right:3%">
+					<IMG src="img/laurel/laurel_reboot_develop1.png" width="100%">
+				</div>
+				<div style=" width: 20%; float:left; "">
+					<IMG  src="img/laurel/laurel_reboot_develop2.png" width="100%">
+				</div>
+				<div style=" width: 20%; float:left; margin-left:3%">
+					<IMG  src="img/laurel/laurel_devgamm.png" width="100%">
+				</div>
+				<div style=" width: 20%; float:left; margin-left:3%; margin-right:5%">
+					<IMG src="img/laurel/laurel_cinekid.png" width="100%">
+				</div>
+			</div>
+
+			
+
 			<div id="platformsAndComing" style="position: relative; margin-top: 10%">
-		    	<P id="coming" class="center">Coming 2016	</P>
+		    	<P id="coming" class="center">Coming 2017	</P>
 		    	<P class="center">Android, PC and Mac</P>
 		    </div>
 
