--- a/index.html
+++ b/index.html
@@ -92,8 +92,18 @@
 
 		<div id="content">
 			
-			<div id="stores">
-						<A href="https://itunes.apple.com/app/id941057494" target="_blank"><IMG src="img/app_store_button.png" width="100%"></A>
+			<div id = "prizes">
+
+				<div style=" width: 35%;float:left; margin-left:5%; margin-right:3%">
+							<A href="https://itunes.apple.com/app/id941057494" target="_blank"><IMG src="img/app_store_button.png" width="100%"></A>
+				</div>
+				<div style=" width: 10%; float:left; "">
+							<IMG src="img/stores_icon.png" width="100%">
+				</div>
+				<div style=" width: 35%; float:left; margin-left:3%; margin-right:5%">
+							<A href="https://play.google.com/store/apps/details?id=air.com.A3donkeys.loveBits" target="_blank"><IMG src="img/play_store_button.png" width="100%"></A>
+				</div>
+
 			</div>
 
 			<!-- TRAILER -->
