--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 			
 
 			<div id="platformsAndComing" style="position: relative; margin-top: 10%">
-		    	<P id="coming" class="center">Coming 2017	</P>
-		    	<P class="center">Android, PC and Mac</P>
+		    	<P id="coming" class="center">Coming 2018	</P>
+		    	<P class="center">PC and Mac</P>
 		    </div>
 
 			<!-- SCREENSHOTS -->
